Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -169,17 +169,17 @@
 
 % \afterpage{\blankpage}\addtocounter{page}{-1}
 
-\setchapterpreamble[u]{\margintoc}
-\chapter{Introduction}\chlbl{intro}
-\input{tex/intro}
-
-\setchapterpreamble[u]{\margintoc}
-\chapter{Fundamentals}\chlbl{fundamentals}
-\input{tex/fundamentals}
+%\setchapterpreamble[u]{\margintoc}
+%\chapter{Introduction}\chlbl{intro}
+%\input{tex/intro}
 
 %\setchapterpreamble[u]{\margintoc}
-%\chapter{Related Work}\chlbl{rel_work}
-%\input{tex/related_work}
+%\chapter{Fundamentals}\chlbl{fundamentals}
+%\input{tex/fundamentals}
+
+\setchapterpreamble[u]{\margintoc}
+\chapter{Related Work}\chlbl{rel_work}
+\input{tex/related_work}
 
 %\setchapterpreamble[u]{\margintoc}
 %\chapter{Biologically Plausible Vision Framework}\chlbl{probabilistic_framework}
