--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -67,8 +67,7 @@ This thesis makes the following contributions:
 
 
 \section{Organisation of Thesis}\seclbl{org_thesis}
-The remainder of the thesis is organised as follows: In \chref{fundamentals}, the fundamentals of deep learning and neurocomputing are explained in detail.
-Experts may skip this chapter; especially the second section on neurocomputing can be omitted, as it is not fundamental for understanding this thesis but only intended for interested readers or those who want to get a better overview of the field or have inspiration for future work.
+The remainder of the thesis is organised as follows: In \chref{fundamentals}, deep learning and neurocomputing fundamentals are explained in detail; experts may skip this chapter.
 \chref{rel_work} introduces the related work. Next, \chref{probabilistic_framework} identifies the most promising biological concepts for visual object recognition and introduces these principles with a vocabulary compatible with the deep learning framework\sidenote{Identifying and explaining neuroscientific findings is considered an important contribution, which is why this section has not been included in the chapter about related work.}.
 Furthermore, it introduces the concept of the Bernoulli neuron and proposes a novel vision learning framework, thereby putting it into the context of the theory of natural intelligence and findings from neuroscience.
 In \chref{experiments}, conducted experiments with the novel framework are described and in \chref{results} the obtained results.
