--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
-\title[Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Probabilistic Neurons]{Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Probabilistic Neurons}
+\title[Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Bernoulli Neurons]{Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Bernoulli Neurons}
 \subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into a Computational Framework}
 
 \author[Pascal Sager]{{\small written by}\\Pascal Sager\\[1ex]  {\small supervised by}\\{\large Prof. Dr. Thilo Stadelmann}\\{\large Dr. Jan Milan Deriu}\\{\large Prof. Dr. Christoph von der Malsburg}\\[4ex]}
@@ -169,33 +169,37 @@
 
 % \afterpage{\blankpage}\addtocounter{page}{-1}
 
-%\setchapterpreamble[u]{\margintoc}
-%\chapter{Introduction}\chlbl{intro}
-%\input{tex/intro}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Introduction}\chlbl{intro}
+\input{tex/intro}
 
-%\setchapterpreamble[u]{\margintoc}
-%\chapter{Fundamentals}\chlbl{fundamentals}
-%\input{tex/fundamentals}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Fundamentals}\chlbl{fundamentals}
+\input{tex/fundamentals}
 
 \setchapterpreamble[u]{\margintoc}
 \chapter{Related Work}\chlbl{rel_work}
 \input{tex/related_work}
 
-%\setchapterpreamble[u]{\margintoc}
-%\chapter{Biologically Plausible Vision Framework}\chlbl{probabilistic_framework}
-%\input{tex/probabilistic_framework}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Biological Inspiration}\chlbl{biological_inspiration}
+\input{tex/biological_inspiration}
 
-%\setchapterpreamble[u]{\margintoc}
-%\chapter{Experiments}\chlbl{experiments}
-%\input{tex/experiments}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Biologically Plausible Vision Framework}\chlbl{probabilistic_framework}
+\input{tex/probabilistic_framework}
 
-%\setchapterpreamble[u]{\margintoc}
-%\chapter{Results}\chlbl{results}
-%\input{tex/results}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Experiments}\chlbl{experiments}
+\input{tex/experiments}
 
-%\setchapterpreamble[u]{\margintoc}
-%\chapter{Future Work \& Conclusion}\chlbl{future_work}
-%\input{tex/future_work}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Results}\chlbl{results}
+\input{tex/results}
+
+\setchapterpreamble[u]{\margintoc}
+\chapter{Future Work \& Conclusion}\chlbl{future_work}
+\input{tex/future_work}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
