--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -58,17 +58,16 @@ This thesis makes the following contributions:
 \begin{enumerate}
 	\item The basics of deep learning and neurocomputing are described. Together with the related work, this provides a survey of the most important research dealing with alternative learning algorithms.
 	\item The ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} is discussed and put into the context of the theory of self-organising projection fibres \sidecite{wiskott_face_1997, wolfrum_recurrent_2008} and the proposed vision framework. I argue that this thesis can be considered a more concrete formulation of this theory.
-    \item Many neuroscientific concepts that are highly relevant for visual object recognition are identified and summarised, and a vocabulary compatible with the current deep learning framework is introduced.
-	\item The Bernoulli neuron is introduced, a neuron firing a binary spike based on a probability distribution.
-	\item A modernised version of the self-organising projection fibre framework is proposed, particularly focusing on building net fragments in a biologically plausible way.
+    \item Many neuroscientific concepts that are highly relevant for visual object recognition are identified and summarised, and a vocabulary compatible with the current deep learning framework is introduced. The contribution of \chref{biological_inspiration} is not per se on discovering new findings but rather summarising relevant concepts.
+	\item An implementation of the identified neuroscientific concepts is proposed based on a novel Bernoulli neuron,  a neuron firing a binary spike based on a probability distribution, and self-organising synaptic connections. This conceptual work describes a new framework that has never been implemented in this form before and originates from this thesis. 
     \item The feasibility of the proposed framework is demonstrated with experiments.
     \item Directions for future research are given to improve the proposed vision framework further.
 \end{enumerate}
 
 
 \section{Organisation of Thesis}\seclbl{org_thesis}
-The remainder of the thesis is organised as follows: In \chref{fundamentals}, deep learning and neurocomputing fundamentals are explained in detail; experts may skip this chapter.
-\chref{rel_work} introduces the related work. Next, \chref{probabilistic_framework} identifies the most promising biological concepts for visual object recognition and introduces these principles with a vocabulary compatible with the deep learning framework\sidenote{Identifying and explaining neuroscientific findings is considered an important contribution, which is why this section has not been included in the chapter about related work.}.
-Furthermore, it introduces the concept of the Bernoulli neuron and proposes a novel vision learning framework, thereby putting it into the context of the theory of natural intelligence and findings from neuroscience.
+The remainder of the thesis is organised as follows: In \chref{fundamentals}, deep learning and neurocomputing fundamentals related to this thesis are outlined in detail; experts may skip this chapter.
+\chref{rel_work} introduces the related work. Next, \chref{biological_inspiration} identifies promising biological concepts for visual object recognition and introduces these principles with a vocabulary compatible with the deep learning framework\sidenote{Identifying and explaining neuroscientific findings is considered an important contribution, which is why this section has not been included in the chapter about related work.}.
+Afterwards, \chref{probabilistic_framework} proposes a novel implementation of the identified biological concepts within a computational framework based on a new neuron called the Bernoulli neuron.
 In \chref{experiments}, conducted experiments with the novel framework are described and in \chref{results} the obtained results.
 Finally, \chref{future_work} concludes the thesis by discussing the advantages and disadvantages of the proposed learning framework and suggests potential directions for future research.
